05.deployment/03.istio/06.rate-limiter/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mouse-reviews
spec:
  host: mouse-reviews
  subsets:
  - name: v1
    labels:
      app: mouse-reviews
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mouse-catalog
spec:
  host: mouse-catalog
  subsets:
  - name: v1
    labels:
      app: mouse-catalog
      version: v1
