05.deployment/03.istio/06.rate-limiter/istio-rate-limiter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: mouse-catalog-rate-limiter-service
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: mouse-catalog
      version: v1
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: 'envoy.filters.network.http_connection_manager'
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            value:
              stat_prefix: http_local_rate_limiter
              enable_x_ratelimit_headers: DRAFT_VERSION_03
              token_bucket:
                # Each token represents an allowance for a single request. When the token bucket is full, requests can pass through without being rate limited.
                max_tokens: 5
                # Field specifies the number of tokens that are added to the token bucket during each refill
                tokens_per_fill: 5
                # Every 20 seconds, the rate limiter will add 5 tokens to the token bucket.
                # These tokens increase the capacity of the bucket, allowing more requests to pass through without being rate limited.
                fill_interval: 20s
              filter_enabled:
                runtime_key: local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
